--- a/src/views/sobre.html
+++ b/src/views/sobre.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre</title>
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="../public/css/bootstrap.min.css">
+    <!-- CSS personalizado -->
+    <link rel="stylesheet" href="../public/css/style.css">
+    <!-- impedir a execução de scripts externos ou não autorizados -->
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self'">
 </head>
+
 <body>
-    <h1>Sobre</h1>
-    <p>👋</p>
+    <div class="container">
+        <h2 class="text-primary">ASSIS TI</h2>
+        <h3 class="text-secondary">Sistema para emissão de OS</h3>
+        <h6>Autor: Professor José de Assis</h6>
+        <h6>Sob a licença MIT</h6>
+        <p>Versão 1.0</p>
+    </div>
+    <!-- Bootstrap -->
+    <script src="../public/js/bootstrap.min.js"></script>
 </body>
+
 </html>
