--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Electron tutorial</title>
+    <!-- Título que será exibido na janela -->
+    <title>MOTO SKY</title>
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="../public/css/bootstrap.min.css">
+    <!-- CSS personalizado -->
+    <link rel="stylesheet" href="../public/css/style.css">
+    <!-- impedir a execução de scripts externos ou não autorizados -->
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline'">
 </head>
+
 <body>
-    <h1>Hello Electron</h1>
+    <div class="container button">
+        <img src="../public/img/clientes.png" alt="clientes" title="Cadastro de clientes" onclick="client()">
+        <img src="../public/img/os.png" alt="computador" title="Emissão de OS" onclick="os()">
+        <img src="../public/img/logo2.png" alt="logo" id="logo">
+    </div>
+    <footer>
+        <p id="dataAtual"></p>
+        <img src="../public/img/dboff.png" alt="dbicon" id="statusdb">
+    </footer>
+
+    <!-- Bootstrap -->
+    <script src="../public/js/bootstrap.min.js"></script>
+    <!-- Scripts -->
+    <script src="../public/js/script.js"></script>
+    <!-- Renderizador -->
+    <script src="renderer.js"></script>
 </body>
+
 </html>
