--- a/src/views/index.html
+++ b/src/views/index.html
@@ -17,8 +17,8 @@
 <body>
     <div class="container button">
         <img src="../public/img/clientes.png" alt="clientes" title="Cadastro de clientes" onclick="client()">
-        <img src="../public/img/os.png" alt="computador" title="Emissão de OS" onclick="os()">
-        <img src="../public/img/logo2.png" alt="logo" id="logo">
+        <img src="../public/img/os2.png" alt="computador" title="Emissão de OS" onclick="os()">
+        <img src="../public/img/logo4.png" alt="logo" id="logo">
     </div>
     <footer>
         <p id="dataAtual"></p>
