--- a/src/views/sobre.html
+++ b/src/views/sobre.html
@@ -15,9 +15,9 @@
 
 <body>
     <div class="container">
-        <h2 class="text-primary">ASSIS TI</h2>
+        <h2 class="text-primary">MOTO SKY</h2>
         <h3 class="text-secondary">Sistema para emissão de OS</h3>
-        <h6>Autor: Professor José de Assis</h6>
+        <h6>Autor: Eder Silva</h6>
         <h6>Sob a licença MIT</h6>
         <p>Versão 1.0</p>
     </div>
