--- a/src/views/os.html
+++ b/src/views/os.html
@@ -15,7 +15,7 @@
 
 <body>
     <div class="container">
-        <form class="mt-2 row g-3">
+        <form id="frmOS" class="mt-2 row g-3">
 
             <!-- OS -->
             <div class="col-md-4">
@@ -62,6 +62,43 @@
             <!-- Linha -->
             <hr class="mt-4 border border-secondary border -1">
 
+            <!-- Descrição do Serviço -->
+            <div class="col-md-12">
+                <label for="serviceDescription" class="form-label">Descrição do Serviço</label>
+                <textarea class="form-control" id="serviceDescription" rows="3" maxlength="200" required></textarea>
+            </div>
+
+            <!-- Materiais utilizados -->
+            <div class="col-md-12">
+                <label for="inputPecasClient" class="form-label">Materiais utilizados</label>
+                <input type="text" class="form-control" id="inputPecasClient" spellcheck="false" required maxlength="60">
+               </div>
+
+               <!-- Data de conclusão -->
+            <div class="col-md-3">
+                <label for="inputconclusãoClient" class="form-label">Data de conclusão</label>
+                <input type="text" class="form-control" id="inputconclusãoClient" spellcheck="false" required maxlength="30">
+               </div>
+
+               <!-- Orçamento do serviço -->
+            <div class="col-md-3">
+                <label for="inputOrcamentoClient" class="form-label">Orçamento do serviço</label>
+                <input type="text" class="form-control" id="inputOrcamentoClient" spellcheck="false" required maxlength="30">
+               </div>
+
+                <!-- Forma de pagamento -->
+            <div class="col-md-3">
+                <label for="inputpagamentoClient" class="form-label">Forma de pagamento</label>
+                <select type="text" class="form-select" id="inputpagamentoClient" spellcheck="false" required maxlength="20">
+                    <option value=""></option>
+                    <option>Pix</option>
+                    <option>Cartão Débito</option>
+                    <option>Cartão Crédito</option>
+                    <option>Dinheiro</option>
+                    <option>Boleto</option>
+                </select>
+               </div>
+
             <!-- Status -->
             <div class="col-md-4">
                 <label class="form-label">Status da OS</label>
@@ -98,6 +135,9 @@
                 </div>
             </div>
         -->
+            <!-- Linha -->
+            <hr class="mt-4 border border-secondary border -1">
+            <!-- <div class="mt-3"> </div> -->
             <div class="d-flex justify-content-center gap-1">
                 <button type="button" class="btn btn-success">Gerar OS</button>
                 <button type="button" class="btn btn-primary">Buscar OS</button>
@@ -109,6 +149,8 @@
 
     <!-- Bootstrap -->
     <script src="../public/js/bootstrap.min.js"></script>
+    <!-- renderizador -->
+    <script src="rendererOS.js"></script>
 </body>
 
 </html>
