--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -8,23 +8,24 @@
     cursor: pointer;
 }
 
-/* Botão reset */
+/* Botão reset 
 #btnReset {
     width: 48px;
     height: 48px;
     background-image: url('../img/clear.png');
     border: none;
     cursor: pointer;
-    margin-left: 10px;
-}
+   
+} */
 
 /* logo */
 #logo {
     position: fixed;
     bottom: 40px;
-    right: 5 px;
+    /*right: 5 px;*/
     border: none;
     cursor: none;
+    margin-left: -60px;
 }
 
 /* rodapé */
@@ -42,14 +43,14 @@ footer {
 
 /* Botao reset */
 #btnReset {
-    width: 64px;
-    height: 64px;
+    width: 48px;
+    height: 48px;
     background-image: url('../img/clear.png');
     border: none;
-    cursor: pointer;
-}
-
-
+    cursor: pointer; 
+    margin-left: 10px;
+} 
+ 
 footer p {
     color: #ffffff;
     padding-top: 7px;
