--- a/src/views/index.html
+++ b/src/views/index.html
@@ -17,8 +17,9 @@
 <body>
     <div class="container button">
         <img src="../public/img/clientes.png" alt="clientes" title="Cadastro de clientes" onclick="client()">
-        <img src="../public/img/os2.png" alt="computador" title="Emissão de OS" onclick="os()">
-        <img src="../public/img/logo4.png" alt="logo" id="logo">
+        <img src="../public/img/motocicleta.png" alt="logo" title="Cadastro de veículo" onclick="moto()">
+        <img src="../public/img/os2.png" alt="OS" title="Emissão de OS" onclick="os()">
+        <img src="../public/img/logo4.png" alt="logo" id="logo">        
     </div>
     <footer>
         <p id="dataAtual"></p>
