--- a/src/views/os.html
+++ b/src/views/os.html
@@ -139,11 +139,12 @@
             <hr class="mt-4 border border-secondary border -1">
             <!-- <div class="mt-3"> </div> -->
             <div class="d-flex justify-content-center gap-1">
-                <button type="button" class="btn btn-success">Gerar OS</button>
+                <button type="submit" class="btn btn-success" id="btnCreate">Gerar OS</button>
                 <button type="button" class="btn btn-primary">Buscar OS</button>
-                <button type="button" class="btn btn-warning">Editar OS</button>
-                <button type="button" class="btn btn-danger">Excluir OS</button>
+                <button type="submit" class="btn btn-warning" id="btnUpdate">Editar OS</button>
+                <button type="button" class="btn btn-danger" id="btnDelete">Excluir OS</button>
                 <button type="button" class="btn btn-secondary">Imprimir OS</button>
+                <button type="reset" class="btn" id="btnReset" onclick="resetFrom()"></button>
         </form>
     </div>
 
