--- a/src/views/sobre.html
+++ b/src/views/sobre.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre</title>
+    <title>Moto Sky - Sobre</title>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="../public/css/bootstrap.min.css">
     <!-- CSS personalizado -->
@@ -15,7 +15,7 @@
 
 <body>
     <div class="container">
-        <h2 class="text-primary">MOTO SKY</h2>
+        <h2 class="text-primary">Moto Sky</h2>
         <h3 class="text-secondary">Sistema para emissão de OS</h3>
         <h6>Autor: Eder Silva</h6>
         <h6>Sob a licença MIT</h6>
