--- a/src/views/index.html
+++ b/src/views/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Título que será exibido na janela -->
-    <title>MOTO SKY</title>
+    <title>Moto Sky</title>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="../public/css/bootstrap.min.css">
     <!-- CSS personalizado -->
