--- a/src/views/cliente.html
+++ b/src/views/cliente.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro de clientes</title>
+    <title>Cadastro de Clientes</title>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="../public/css/bootstrap.min.css">
     <!-- CSS personalizado -->
@@ -29,7 +29,7 @@
 
             <!-- Nome -->
             <div class="col-md-8">
-                <label for="inputNameClient" class="form-label">Nome</label>
+                <label for="inputNameClient" class="form-label">Nome do Cliente</label>
                 <input type="text" class="form-control" id="inputNameClient" spellcheck="false" required maxlength="26">
             </div>
 
