--- a/src/views/os.html
+++ b/src/views/os.html
@@ -151,7 +151,7 @@
     <!-- Bootstrap -->
     <script src="../public/js/bootstrap.min.js"></script>
     <!-- renderizador -->
-    <script src="rendererOS.js"></script>
+    <script src="rendererOs.js"></script>
 </body>
 
 </html>
