--- a/src/views/index.html
+++ b/src/views/index.html
@@ -17,7 +17,7 @@
 <body>
     <div class="container button">
         <img src="../public/img/clientes.png" alt="clientes" title="Cadastro de clientes" onclick="client()">
-        <img src="../public/img/Motocicleta20.jpg" alt="logo" title="Cadastro de veículo" onclick="moto()">
+        <img src="../public/img/Motocicleta20.jpg" alt="Motocicleta" title="Cadastro de veículo" onclick="moto()">
         <img src="../public/img/os2030.png" alt="OS" title="Emissão de OS" onclick="os()">
         <img src="../public/img/logo4.png" alt="logo" id="logo">        
     </div>
