--- a/src/views/moto.html
+++ b/src/views/moto.html
@@ -17,15 +17,15 @@
     <div class="container">
         <form id="frmMoto" class="mt-2 row g-3">
 
-            <!-- Nome do Proprietario -->
+            <!-- Nome do Proprietário -->
             <div class="col-md-5">
-                <label for="inputProprietarioClient" class="form-label">Nome do Proprietario</label>
+                <label for="inputProprietarioClient" class="form-label">Nome do Proprietário</label>
                 <input type="text" class="form-control" id="inputProprietarioClient" spellcheck="false" maxlength="15">
             </div>
 
             <!-- Marca da motocicleta -->
             <div class="col-md-3">
-                <label for="inputMarcaClient" class="form-label">Marca do Veiculo</label>
+                <label for="inputMarcaClient" class="form-label">Marca do Veículo</label>
                 <input type="text" class="form-control" id="inputMarcaClient" spellcheck="false" required
                     maxlength="15">
             </div>
