--- a/src/views/os.html
+++ b/src/views/os.html
@@ -82,7 +82,7 @@
 
                <!-- Orçamento do serviço -->
             <div class="col-md-3">
-                <label for="inputOrcamentoClient" class="form-label">Orçamento do serviço</label>
+                <label for="inputOrcamentoClient" class="form-label">Profissional</label>
                 <input type="text" class="form-control" id="inputOrcamentoClient" spellcheck="false" required maxlength="30">
                </div>
 
