--- a/src/views/os.html
+++ b/src/views/os.html
@@ -19,13 +19,13 @@
 
             <!-- OS -->
             <div class="col-md-4">
-                <label class="form-label">Nº OS</label>
+                <label class="form-label" for="txtOs">Nº OS</label>
                 <input type="text" class="form-control" id="txtOs" disabled>
             </div>
 
             <!-- Data -->
             <div class="col-md-3">
-                <label class="form-label">Data</label>
+                <label class="form-label" for="txtData">Data</label>
                 <input type="text" class="form-control" id="txtData" disabled>
             </div>
 
