--- a/src/views/cliente.html
+++ b/src/views/cliente.html
@@ -39,7 +39,7 @@
             <!-- CPF -->
             <div class="col-md-4">
                 <label for="inputCPFClient" class="form-label">CPF</label>
-                <input type="text" class="form-control" id="inputCPFClient" spellcheck="false" maxlength="15">
+                <input type="text" class="form-control" id="inputCPFClient" spellcheck="false" maxlength="15" onblur="validarCPF()" required>
             </div>
 
             <!-- Email -->
