--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -63,7 +63,7 @@ footer p {
 }
 
 body {
-    background-color: #d3e2ee;
+    background-color: #d3d3d3;
 }
 
 /* lista de clientes vinculados a OS */
