--- a/src/views/os.html
+++ b/src/views/os.html
@@ -15,7 +15,7 @@
 
 <body>
     <div class="container">
-        <form id="frmOS" class="mt-2 row g-3">
+        <form class="mt-2 row g-3" id="frmOS">
 
             <!-- OS -->
             <div class="col-md-4">
@@ -48,18 +48,18 @@
 
             <!-- Id -->
             <div class="col-md-3">
-                <label for="inputIdClient" class="form-label">Id do cliente</label>
+                <label for="inputIdClient" class="form-label">ID do Cliente</label>
                 <input type="text" class="form-control" id="inputIdClient" spellcheck="false" maxlength="15" disabled>
             </div>
 
             <!-- Nome -->
-            <div class="col-md-5">
+            <div class="col-md-3">
                 <label for="inputNameClient" class="form-label">Nome</label>
                 <input type="text" class="form-control" id="inputNameClient" spellcheck="false" maxlength="30" disabled>
             </div>
 
             <!-- Telefone -->
-            <div class="col-md-3">
+            <div class="col-md-2">
                 <label for="inputPhoneClient" class="form-label">Telefone</label>
                 <input type="text" class="form-control" id="inputPhoneClient" spellcheck="false" maxlength="15"
                     disabled>
@@ -67,15 +67,28 @@
 
             <input type="text" id="idClient"> <!-- oculto -->
 
-            <!-- CPF -->
-            <div class="col-md-4">
-                <label for="inputCPFClient" class="form-label">CPF</label>
-                <input type="text" class="form-control" id="inputCPFClient" spellcheck="false" maxlength="15" disabled>
-            </div>
-
             <!-- Linha -->
             <hr class="mt-4 border border-secondary border -1">
 
+            <!-- Status -->
+            <div class="col-md-4">
+                <label class="form-label">Status da OS</label>
+                <select class="form-select" id="osStatus">
+                    <option value="">Selecione</option>
+                    <option>Aberta</option>
+                    <option>Em andamento</option>
+                    <option>Aguardando peças</option>
+                    <option>Finalizada</option>
+                    <option>Cancelada</option>
+                </select>
+            </div>
+        
+            <!-- CPF --
+            <div class="col-md-4">
+                <label for="inputCPFClient" class="form-label">CPF</label>
+                <input type="text" class="form-control" id="inputCPFClient" spellcheck="false" maxlength="15" disabled>
+            </div>            
+            -->
             <!-- Descrição do Serviço -->
             <div class="col-md-12">
                 <label for="serviceDescription" class="form-label">Descrição do Serviço</label>
@@ -94,7 +107,7 @@
                 <input type="text" class="form-control" id="inputconclusãoClient" spellcheck="false" required maxlength="30">
                </div>
 
-               <!-- Orçamento do serviço -->
+               <!-- Mecanico Responsavel -->
             <div class="col-md-3">
                 <label for="inputOrcamentoClient" class="form-label">Profissional</label>
                 <input type="text" class="form-control" id="inputOrcamentoClient" spellcheck="false" required maxlength="30">
@@ -113,18 +126,7 @@
                 </select>
                </div>
 
-            <!-- Status -->
-            <div class="col-md-4">
-                <label class="form-label">Status da OS</label>
-                <select class="form-select" id="osStatus">
-                    <option value="">Selecione</option>
-                    <option>Aberta</option>
-                    <option>Em andamento</option>
-                    <option>Aguardando peças</option>
-                    <option>Finalizada</option>
-                    <option>Cancelada</option>
-                </select>
-            </div>
+            
             <!--
             <div class="mb-3">
                 <label class="form-label">Equipamento</label>
@@ -152,8 +154,8 @@
             <!-- Linha -->
             <hr class="mt-4 border border-secondary border -1">
             <!-- <div class="mt-3"> </div> -->
-            <div class="d-flex justify-content-center gap-1">
-
+             
+            <div class="mt-4 d-flex justify-content-center gap-1">
                 <button type="submit" class="btn btn-success" id="btnCreate">Gerar OS</button>
                 <button type="button" class="btn btn-primary" onclick="inputOS()">Buscar OS</button>
                 <button type="submit" class="btn btn-warning" id="btnUpdate">Editar OS</button>
