--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -22,10 +22,10 @@
 #logo {
     position: fixed;
     bottom: 40px;
-    /*right: 5 px;*/
+    /* right: 5 px; */
     border: none;
     cursor: none;
-    margin-left: -60px;
+    margin-left: -100px;
 }
 
 /* ocultar o campomdo cliente */
@@ -38,7 +38,7 @@ footer {
     width: 100%;
     height: 55px;
     display: flex;
-    background-color: #0078d7;
+    background-color: #323232;
     position: fixed;
     bottom: 0;
     display: flex;
@@ -69,7 +69,7 @@ body {
 /* lista de clientes vinculados a OS */
 #viewListSuggestion {
     z-index: 2;
-    max-width: 380px;
+    max-width: 301px;
 }
 
 #viewListSuggestion li {
