--- a/src/views/moto.html
+++ b/src/views/moto.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro de Veículos</title>
+    <title>Cadastro de Veículo</title>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="../public/css/bootstrap.min.css">
     <!-- CSS personalizado -->
@@ -19,13 +19,13 @@
 
             <!-- Nome do Proprietário -->
             <div class="col-md-5">
-                <label for="inputProprietarioClient" class="form-label">Nome do Proprietário</label>
+                <label for="inputProprietarioClient" class="form-label">Vincular veículo a um cliente</label>
                 <input type="text" class="form-control" id="inputProprietarioClient" spellcheck="false" maxlength="15">
             </div>
 
             <!-- Marca da motocicleta -->
             <div class="col-md-3">
-                <label for="inputMarcaClient" class="form-label">Marca do Veículo</label>
+                <label for="inputMarcaClient" class="form-label">Montadora</label>
                 <input type="text" class="form-control" id="inputMarcaClient" spellcheck="false" required
                     maxlength="15">
             </div>
@@ -39,7 +39,7 @@
 
             <!-- Ano da motocicleta -->
             <div class="col-md-3">
-                <label for="inputAnoClient" class="form-label">Ano</label>
+                <label for="inputAnoClient" class="form-label">Ano modelo</label>
                 <input type="text" class="form-control" id="inputAnoClient" spellcheck="false" maxlength="15">
             </div>
 
@@ -58,7 +58,7 @@
 
             <!-- Chassi -->
             <div class="col-md-4">
-                <label for="inputChassiClient" class="form-label">Chassi</label>
+                <label for="inputChassiClient" class="form-label">Nr. Chassi</label>
                 <input type="text" class="form-control" id="inputChassiClient" spellcheck="false" required
                     maxlength="30">
             </div>
