--- a/src/views/cliente.html
+++ b/src/views/cliente.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastrar novo cliente</title>
+    <title>Tela Cadastro de Clientes</title>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="../public/css/bootstrap.min.css">
     <!-- CSS personalizado -->
@@ -32,7 +31,7 @@
 
             <!-- Nome -->
             <div class="col-md-8">
-                <label for="inputNameClient" class="form-label">Nome do Cliente</label>
+                <label for="inputNameClient" class="form-label">Nome Completo</label>
                 <input type="text" class="form-control" id="inputNameClient" spellcheck="false" required maxlength="26">
             </div>
 
