--- a/src/views/index.html
+++ b/src/views/index.html
@@ -16,9 +16,9 @@
 
 <body>
     <div class="container button">
-        <img src="../public/img/clientes30.png" alt="clientes" title="Cadastro de Clientes" onclick="client()">
-        <img src="../public/img/motocicleta50.png" alt="Motocicleta" title="Cadastro de Veículos" onclick="moto()">
-        <img src="../public/img/os2050.png" alt="motocicleta" title="Emissão de OS" onclick="os()">
+        <img src="../public/img/clientes30.png" alt="Clientes" title="Cadastro de clientes" onclick="client()">
+        <img src="../public/img/motocicleta50.png" alt="Motocicleta" title="Cadastro de Veículo" onclick="moto()">
+        <img src="../public/img/os2050.png" alt="OS" title="Emissão de OS" onclick="os()">
         <img src="../public/img/logo4.png" alt="logo" id="logo">        
     </div>
     <footer>
