--- a/src/views/moto.html
+++ b/src/views/moto.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro de Veículo</title>
+    <title>Tela Cadastro de Veículos</title>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="../public/css/bootstrap.min.css">
     <!-- CSS personalizado -->
@@ -17,9 +17,9 @@
     <div class="container">
         <form id="frmMoto" class="mt-2 row g-3">
 
-            <!-- Nome do Proprietário -->
+            <!-- Nome do Cliente -->
             <div class="col-md-5">
-                <label for="inputProprietarioClient" class="form-label">Vincular veículo a um cliente</label>
+                <label for="inputProprietarioClient" class="form-label">Nome do cliente</label>
                 <input type="text" class="form-control" id="inputProprietarioClient" spellcheck="false" maxlength="15">
             </div>
 
@@ -77,7 +77,7 @@
     <!-- Bootstrap -->
     <script src="../public/js/bootstrap.min.js"></script>
     <!-- renderizador -->
-    <script src="rendererMoto.js"></script>
+    <script src="../views/rendererMoto.js"></script>
 
 </body>
 
