--- a/src/views/os.html
+++ b/src/views/os.html
@@ -15,7 +15,7 @@
 
 <body>
     <div class="container">
-        <form class="mt-2 row g-3" id="frmOS">
+        <form class="mt-1 row g-3" id="frmOS">
 
             <!-- OS -->
             <div class="col-md-4">
@@ -36,7 +36,7 @@
                     <input type="text" class="form-control" id="inputSearchClient" spellcheck="false" maxlength="30">
                     <span class="input-group-text">
                         <img src="../public/img/search.png" alt="lupa" width="20">
-                    </span>
+                    </span>                    
                 </div>
                 <!-- lista de sugestoes  - estilo google -->
                  <ul id="viewListSuggestion" class="list-group position-absolute w-100"></ul>
@@ -92,8 +92,8 @@
 
             <!-- Orçamento do serviço -->
             <div class="col-md-3">
-                <label for="inputOrcamentoClient" class="form-label">Orçamento do serviço</label>
-                <input type="text" class="form-control" id="inputOrcamentoClient" spellcheck="false" required maxlength="30">
+                <label class="form-label" for="inputTotal">Valor</label>
+                <input type="number" class="form-control" id="inputTotal" step="0.01" min="0">
                </div>
 
             <!-- Forma de pagamento -->
