--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -37,7 +37,7 @@
 
 /* rodapé */
 footer {
-    background-color: #2a2a2a;
+    background-color: #0078d7;
     color: white;    
     padding: 5px;
     position: fixed;
