--- a/src/views/cliente.html
+++ b/src/views/cliente.html
@@ -37,7 +37,7 @@
 
             <!-- CPF -->
             <div class="col-md-4">
-                <label for="inputCPFClient" class="form-label">CPF</label>
+                <label for="inputCPFClient" class="form-label">CPF/CNPJ</label>
                 <input type="text" class="form-control" id="inputCPFClient" spellcheck="false" maxlength="15" onblur="validarCPF()" required>
             </div>
 
