--- a/src/views/os.html
+++ b/src/views/os.html
@@ -29,6 +29,16 @@
                 <input type="text" class="form-control" id="inputData" disabled>
             </div>
 
+            <!--CPF--> 
+            <div class="col-md-3 ">
+                <label for="inputCPFClient" class="form-label">CPF/CNPJ</label>
+                <input type="text" class="form-control" id="inputCPFClient" spellcheck="false" maxlength="15" disabled>
+            </div> 
+
+            <!-- Buscar cliente -->
+            <div class="col-md-5">
+            </div>
+
             <!-- Buscar cliente -->
             <div class="col-md-4">
                 <label for="inputSearchClient" class="form-label">Buscar Cliente</label>
@@ -59,60 +69,18 @@
                 <label for="inputPhoneClient" class="form-label">Telefone</label>
                 <input type="text" class="form-control" id="inputPhoneClient" spellcheck="false" maxlength="15"
                     disabled>
-            </div>
+            </div>    
+            
 
             <input type="text" id="idClient"> <!-- oculto -->
-
-            <!--CPF--> 
-            <div class="col-md-4 ">
-                <label for="inputCPFClient" class="form-label">CPF/CNPJ</label>
-                <input type="text" class="form-control" id="inputCPFClient" spellcheck="false" maxlength="15" disabled>
-            </div> 
 
             <!-- Linha -->
             <hr class="mt-4 border border-secondary border -1">
 
-            <!-- Descrição do Serviço -->
-            <div class="col-md-12">
-                <label for="serviceDescription" class="form-label">Observações / Ocorrências</label>
-                <textarea class="form-control" id="serviceDescription" rows="3" maxlength="200" required></textarea>
-            </div>
-
-            <!-- Materiais utilizados -->
-            <div class="col-md-12">
-                <label for="inputPecasClient" class="form-label">Serviço Executado</label>
-                <input type="text" class="form-control" id="inputPecasClient" spellcheck="false" required maxlength="60">
-               </div>
-
-            <!-- Data de conclusão -->
-            <div class="col-md-3">
-                <label for="inputconclusãoClient" class="form-label">Data Saída</label>
-                <input type="text" class="form-control" id="inputconclusãoClient" spellcheck="false" required maxlength="30">
-               </div>
-
-            <!-- Orçamento do serviço -->
-            <div class="col-md-3">
-                <label class="form-label" for="inputTotal">Valor</label>
-                <input type="text" class="form-control" id="inputTotal" step="0.01" min="0">
-               </div>
-
-            <!-- Forma de pagamento -->
-            <div class="col-md-3">
-                <label for="inputpagamentoClient" class="form-label">Forma de pagamento</label>
-                <select type="text" class="form-select" id="inputpagamentoClient" spellcheck="false" required maxlength="20">
-                    <option value="">Pagamento</option>
-                    <option>Pix</option>
-                    <option>Cartão Débito</option>
-                    <option>Cartão Crédito</option>
-                    <option>Dinheiro</option>
-                    <option>Boleto</option>
-                </select>
-               </div>
-
             <!-- Status -->
             <div class="col-md-3">
                 <label class="form-label">Status da OS</label>
-                <select class="form-select" id="osStatus">
+                <select class="form-select" id="inputStatus" required>
                     <option value="">Selecione</option>
                     <option>Aberta</option>
                     <option>Em andamento</option>
@@ -121,17 +89,65 @@
                     <option>Cancelada</option>
                 </select>
             </div>
-                                    
-            <!-- Linha -->
-            <hr class="row mt-4 aling-itens-end">
 
-            <div class="mt-2 justify-content-center gap-1 aling-itens-center">
-                <button type="submit" class="btn btn-success" id="btnCreate">Gerar OS</button>  
-                <button type="button" class="btn btn-primary" onclick="findOS()" >Buscar OS</button>              
+            <!-- Motocicleta -->
+            <div class="col-md-6">
+                <label class="form-label" for="inputMotorcycle">Veículo</label>
+                <input type="text" class="form-control" id="inputMotorcycle" maxlength="44" required>
+            </div>
+
+            <!-- Placa -->
+            <div class="col-md-3">
+                <label class="form-label" for="inputSerial">Placa</label>
+                <input type="text" class="form-control" id="inputSerial" maxlength="20">
+            </div>
+
+            <!-- Problema informado -->
+            <div class="col-md-7">
+                <label class="form-label" for="inputProblem">Problema Informado</label>
+                <input type="text" class="form-control" id="inputProblem" maxlength="54" required>
+            </div>
+
+            <!-- Observações -->
+            <div class="col-md-5">
+                <label class="form-label" for="inputObs">Observações</label>
+                <input type="text" class="form-control" id="inputObs" maxlength="35">
+            </div>
+
+            <!-- Tecnico especialista -->
+            <div class="col-md-3">
+                <label class="form-label" for="inputSpecialist">Mecânico de Motocicletas</label>
+                <input type="text" class="form-control" id="inputSpecialist" maxlength="20">
+            </div>
+
+            <!-- Diagnóstico técnico -->
+            <div class="col-md-9">
+                <label class="form-label" for="inputDiagnosis">Laudo Técnico / Serviço Executado</label>
+                <input type="text" class="form-control" id="inputDiagnosis" maxlength="60">
+            </div>
+
+            <!-- Peças --->
+            <div class="col-md-9">
+                <label class="form-label" for="inputParts">Troca de Peças</label>
+                <input type="text" class="form-control" id="inputParts" maxlength="60">
+            </div>             
+
+             <!-- Valor do serviço -->
+            <div class="col-md-3">
+                <label class="form-label" for="inputTotal">Valor</label>
+                <input type="number" class="form-control" id="inputTotal" step="0.01" min="0">
+            </div>
+                                                 
+            <!-- Linha <hr class="row mt-4 aling-itens-end">-->            
+
+            <div class="mt-5 d-flex justify-content-center gap-1">
+                <button type="submit" class="btn btn-success" id="btnCreate">Gerar OS</button>                             
                 <button type="submit" class="btn btn-warning" id="btnUpdate">Editar OS</button>
-                <button type="button" class="btn btn-danger" id="btnDelete">Excluir OS</button>  
-                <button type="button" class="btn btn-secondary" onclick="generateOS()">Imprimir OS</button>
+                <button type="button" class="btn btn-danger" id="btnDelete"onclick="removeOS()">Excluir OS</button>
                 <button type="reset" class="btn" id="btnReset" onclick="resetForm()"></button>
+                <button type="button" class="btn btn-primary" onclick="findOS()" id="btnBuscaOS">Buscar OS</button>  
+                <button type="button" class="btn btn-secondary" onclick="generateOS()">Imprimir OS</button>
+                
         </form>
     </div>
 
